# django-api

./: pyproject.toml  schema.yml
django_api/: settings.py  urls.py
