[tool.poetry]
name = "django-api"
version = "0.1.0"
description = "This is a django backend"
authors = ["TianaNanta <andrianjakananta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg = "^3.1.12"
drf-spectacular = {extras = ["sidecar"], version = "^0.26.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
